--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --experimental-worker dist/index.js",
+    "start:ts": "ts-node ./src/index.ts",
+    "start:reload": "ts-node-dev ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,10 +22,17 @@
   "homepage": "https://github.com/facuhrodriguez/Diseno-de-Software#readme",
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.8",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "tslint": "^6.1.3"
