--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && npm run copydotenv",
+    "copydotenv": "copyfiles .env dist",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-worker dist/index.js",
     "start:ts": "ts-node ./src/index.ts",
@@ -23,10 +26,12 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.8",
     "body-parser": "^1.19.0",
+    "copyfiles": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
