--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/jira-client": "^6.13.1",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.8",
     "body-parser": "^1.19.0",
@@ -35,6 +36,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jira-client": "^6.21.1",
+    "jira-connector": "^3.1.0",
     "mongoose": "^5.10.9",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
